# sss

./: CMakeLists.txt  Jenkinsfile  README.md  hazmat.c  sss.c  tweetnacl.c  tweetnacl.h
include/: hazmat.h  sss.h  tweetnacl.h
src/: CMakeLists.txt  hazmat.c  sss.c  tweetnacl.c
tests/: CMakeLists.txt  test_key_shares.c  test_shares.c  tests.c  tests.h
